# AI-workflow

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: agents.md  architecture.md  cli-spec.md  contract-spec.md  dev-guide.md  workflow.md
src/task_agent/: __init__.py  cli.py  debug_relay.py  runner.py  settings.py  state.py  workflow.py
src/task_agent/agents/: __init__.py  architect.py  base.py  developer.py  reviewer.py
src/task_agent/prompts/: architect.txt  developer.txt  reviewer.txt
src/task_agent/utils/: contract_validator.py  file_writer.py  task_dir.py
tests/: test_core.py
